--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="https://aitoolscurator.netlify.app/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://linktr.ee/jackiewwilson">Creators</a>
