--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <a href="https://snackprompt.com/" class="link-card card">
                 <div class="card-body">
                     <h5 class="card-title">Snack Prompt</h5>
-                    <p class="card-text text-dark"> Join 50,000+ people discovering New AI Tools, Useful Prompts, and Latest AI Developments | Read by professionals from Google, OpenAI, Notion, Apple.                        </p>
+                    <p class="card-text text-dark"> Tons of prompts for GPT that are updated frequently.                       </p>
                 </div>
             </a>
         </div>
