--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">AI Tools Curator</a>
+            <a class="navbar-brand" href="https://aitoolscurator.netlify.app/">AI Tools Curator</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -276,6 +276,48 @@
                     <div class="card-body">
                         <h5 class="card-title">FinChat</h5>
                         <p class="card-text text-dark">Finchat is the ChatGPT for Finance. Using AI, FinChat generates answers to questions about public companies and investors.</p>
+                    </div>
+                </a>
+                <a href="https://www.chainintel.info/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">ChainIntelGPT</h5>
+                        <p class="card-text text-dark">Raise capital quickly and easily with crowdfunding. Ask friends and family for donations in exchange for rewards and use it to launch a project or business.</p>
+                    </div>
+                </a>
+                <a href="https://pinklion.xyz/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Pink Lion</h5>
+                        <p class="card-text text-dark">AI based financial reasoning to make you a better investor — Have your stocks, ETFs, funds & crypto investments under control.</p>
+                    </div>
+                </a>
+                <a href="https://app.hypeindex.com/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Hype Index</h5>
+                        <p class="card-text text-dark">Unlock the power of the cloud with cloud computing. Access data and applications from anywhere, anytime. Efficiently store and manage data with cost-effective solutions.</p>
+                    </div>
+                </a>                
+                <a href="https://raizer.app/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Raizer</h5>
+                        <p class="card-text text-dark">Grow your business faster with Raizer's AI-powered investor data. Find the best potential investors for your project and get them on board quickly.</p>
+                    </div>
+                </a>
+                <a href="https://gorillaterminal.com/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">GorillaTerminal AI</h5>
+                        <p class="card-text text-dark">Gain insights into stock and industry analysis quickly with Gorilla Terminal's proprietary technology. Reduce manual effort, uncover insights, and make more informed decisions with advanced algorithms and sophisticated analysis tools.</p>
+                    </div>
+                </a>
+                <a href="https://zerotax.ai/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">ZeroTax AI</h5>
+                        <p class="card-text text-dark">Get accurate and reliable tax advice on demand with TaxGPT. Our experienced tax professionals provide personalized advice so you can trust you're getting best results. Perfect for busy professionals and business owners.</p>
+                    </div>
+                </a>
+                <a href="https://finsheet.io/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Finsheet</h5>
+                        <p class="card-text text-dark">Make informed decisions and maximize returns with Finsheet's proprietary technology and extensive research capabilities.</p>
                     </div>
                 </a>
             </div>
