--- a/index.html
+++ b/index.html
@@ -384,6 +384,12 @@
                             <p class="card-text text-dark">DreamStudio is an easy-to-use interface for creating images.</p>
                         </div>
                     </a>
+                    <a href="https://www.midjourney.com/" class="link-card card">
+                        <div class="card-body">
+                            <h5 class="card-title">Midjourney</h5>
+                            <p class="card-text text-dark">Midjourney is an independent research lab exploring new mediums of thought and expanding the imaginative powers of the human species. Generate the best art today.</p>
+                        </div>
+                    </a>
                 </div>
             </div>   
             
