--- a/index.html
+++ b/index.html
@@ -390,6 +390,12 @@
                             <p class="card-text text-dark">Midjourney is an independent research lab exploring new mediums of thought and expanding the imaginative powers of the human species. Generate the best art today.</p>
                         </div>
                     </a>
+                    <a href="https://leonardo.ai/" class="link-card card">
+                        <div class="card-body">
+                            <h5 class="card-title">Leonardo AI</h5>
+                            <p class="card-text text-dark">Unleash your creative spirit with Leonardo.Ai: AI-driven platform that revolutionizes the creative process by enabling users to quickly and easily create complex 3D visuals.</p>
+                        </div>
+                    </a>
                 </div>
             </div>   
             
