--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Tools Curator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="x-icon" href="">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -41,6 +42,26 @@
             display: flex;
             flex-wrap: wrap;
             position: absolute;
+        }
+        .footer-container {
+            background-color: white;
+            padding: 2rem 0;
+        }
+        .social-icons a {
+            color: #212529;
+            font-size: 1.5rem;
+            margin: 0 0.5rem;
+            transition: color 0.3s;
+        }
+        .social-icons a:hover {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .copyright-text {
+            background-color: rgba(0, 0, 0, 0.2);
+            padding: 1rem;
+            color: #212529;
+            font-size: 0.9rem;
         }
     </style>
 </head>
@@ -552,20 +573,21 @@
         </div>
     </div>
 
-    <footer class="text-center text-white mb-2" style="background-color: white;">
-        <div class="container pt-4">
-          <section class="mb-4">
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://twitter.com/JackieWilson00" role="button" data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a> 
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://linkedin.com/in/jackiewwilson/" role="button" data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.github.com/thejackiewilson/" role="button" data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
-            </section>
-        </div>
-            <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                        © 2023 Copyright:
-                <a class="text-dark" href="https://linktr.ee/jackiewwilson">AI Tools Curator Created By Jackie Wilson</a>
+    <footer class="footer-container">
+        <div class="container text-center">
+            <div class="social-icons mb-4">
+                <a href="https://twitter.com/JackieWilson00" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+                <a href="https://linkedin.com/in/jackiewwilson/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.github.com/thejackiewilson/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
             </div>
+            <div class="copyright-text">
+                © 2023 Copyright: <a href="https://linktr.ee/jackiewwilson">AI Tools Curator Created By Jackie Wilson</a>
+            </div>
+        </div>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
