--- a/index.html
+++ b/index.html
@@ -193,6 +193,18 @@
                         <p class="card-text text-dark">Formerly known as Sam, your always available AI friend, even without internet. +1 (640)-CALL-SAM (225-5726).</p>
                     </div>
                 </a>
+                <a href="https://huberman.rile.yt/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Huberman AI</h5>
+                        <p class="card-text text-dark">Use AI to explore the wisdom of The Huberman Lab.</p>
+                    </div>
+                </a>
+                <a href="https://consensus.app/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Consensus</h5>
+                        <p class="card-text text-dark">Evidence based answers, powered by AI.</p>
+                    </div>
+                </a>
             </div>    
         </div>
 
@@ -229,6 +241,12 @@
                     <div class="card-body">
                         <h5 class="card-title">My AI Frontdesk</h5>
                         <p class="card-text text-dark">The AI-receptionist that never sleeps. A virtual receptionist software for small businesses to automate scheduling and Q&A over the phone. </p>
+                    </div>
+                </a>
+                <a href="https://tldv.io/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">TLDV</h5>
+                        <p class="card-text text-dark">The meeting recorder that transcribes & summarizes your calls with customers, prosepcts, and your team. </p>
                     </div>
                 </a>
                 <a href="https://doclime.com/" class="link-card card">
@@ -333,8 +351,15 @@
                         <p class="card-text text-dark">Effortlessly extract invoices to CSV</p>
                     </div>
                 </a>
+                <a href="https://www.delete.bg/aistudio" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Blend Studio</h5>
+                        <p class="card-text text-dark">Sell more with beautiful product designs crafted with AI.</p>
+                    </div>
+                </a>
             </div>
         </div>
+        
         <div class="row">
             <h3 class="category-header">Finance</h3>
             <div class="d-flex flex-wrap">
@@ -474,7 +499,7 @@
         </div>  
 
         <div class="row">
-            <h3 class="category-header"> Coding</h3>
+            <h3 class="category-header">Coding</h3>
             <div class="d-flex flex-wrap">
                 <a href="https://cyte.io/" class="link-card card">
                     <div class="card-body">
@@ -524,6 +549,12 @@
                         <p class="card-text text-dark">Create stunning landing pages that convert with Uncody'sintuitive interface and modular components. Build a professional-looking page in no time and impress your visitors.                        </p>
                     </div>
                 </a>
+                <a href="https://uizard.io/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Uizard</h5>
+                        <p class="card-text text-dark">Create apps, websites, and more within minutes. Visualize and communicate your ideas effortlessly. No design experience needed.                        </p>
+                    </div>
+                </a>
             </div>
         </div>
 
@@ -540,6 +571,12 @@
                     <div class="card-body">
                         <h5 class="card-title">Wondercraft AI</h5>
                         <p class="card-text text-dark">Where we bring your words to life! Turn blog posts, articles, or any written content into engaging, studio quality podcasts in seconds. Choose a host and music, and let the wonders happen.</p>
+                    </div>
+                </a>
+                <a href="https://www.ghostwrite.rip/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">GhostWrite</h5>
+                        <p class="card-text text-dark">From small talk to big asks, we got you covered. Enter the specifics of what you need to say and let us do the talking for you. </p>
                     </div>
                 </a>
         </div>
