--- a/index.html
+++ b/index.html
@@ -205,6 +205,18 @@
                         <p class="card-text text-dark">Evidence based answers, powered by AI.</p>
                     </div>
                 </a>
+                <a href="https://cat-gpt.com/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Cat GPT</h5>
+                        <p class="card-text text-dark">Introducing CatGPT, the meowst sassy, all-knowing system powered by OpenAI.</p>
+                    </div>
+                </a>
+                <a href="https://agentgpt.reworkd.ai/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">AgentGPT</h5>
+                        <p class="card-text text-dark">AgentGPT allows you to configure and deploy Autonomous AI agents. Name your custom AI and have it embark on any goal imaginable. It will attempt to reach the goal by thinking of tasks to do, executing them, and learning from the results. Essentially, AutoGPT.</p>
+                    </div>
+                </a>
             </div>    
         </div>
 
@@ -259,12 +271,6 @@
                     <div class="card-body">
                         <h5 class="card-title">Ad Copy</h5>
                         <p class="card-text text-dark">The first AI copy tool built to drive more clicks and conversions for digital advertisers is here.</p>
-                    </div>
-                </a>
-                <a href="https://agentgpt.reworkd.ai/" class="link-card card">
-                    <div class="card-body">
-                        <h5 class="card-title">AgentGPT</h5>
-                        <p class="card-text text-dark">AgentGPT allows you to configure and deploy Autonomous AI agents. Name your custom AI and have it embark on any goal imaginable. It will attempt to reach the goal by thinking of tasks to do, executing them, and learning from the results.</p>
                     </div>
                 </a>
                 <a href="https://rationale.jina.ai/" class="link-card card">
