--- a/index.html
+++ b/index.html
@@ -217,6 +217,18 @@
                         <p class="card-text text-dark">AgentGPT allows you to configure and deploy Autonomous AI agents. Name your custom AI and have it embark on any goal imaginable. It will attempt to reach the goal by thinking of tasks to do, executing them, and learning from the results. Essentially, AutoGPT.</p>
                     </div>
                 </a>
+                <a href="https://www.chaingpt.org/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">ChainGPT</h5>
+                        <p class="card-text text-dark">Your personal expert in all crypto & blockchain-related topics.                    </p>
+                    </div>
+                </a>
+                <a href="https://seovendor.co/seo-gpt/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">SEO GPT</h5>
+                        <p class="card-text text-dark">Original content written to pass AI detectors. New marketing content types added all the time. Keyword-optimized, naturally semantic writing, developed from 15+ years of SEO and marketing experience. It's completely free. What is not to like?             </p>
+                    </div>
+                </a>
             </div>    
         </div>
 
@@ -477,6 +489,12 @@
                         <p class="card-text text-dark"> Make original songs in seconds, even if you've never made music before. Submit your songs to streaming platforms and get paid when people listen. Join a global community of artists empowered by Boomy AI.</p>
                     </div>
                 </a>
+                <a href="https://rapli.co/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Rapli</h5>
+                        <p class="card-text text-dark">Suprise everyone you know with unique AI rap. Rap about anything!.</p>
+                    </div>
+                </a>
                 <a href="https://dreamstudio.ai/generate" class="link-card card">
                     <div class="card-body">
                         <h5 class="card-title">DreamStudio AI</h5>
@@ -493,6 +511,12 @@
                     <div class="card-body">
                         <h5 class="card-title">Leonardo AI</h5>
                         <p class="card-text text-dark">Unleash your creative spirit with Leonardo.Ai: AI-driven platform that revolutionizes the creative process by enabling users to quickly and easily create complex 3D visuals.</p>
+                    </div>
+                </a>
+                <a href="https://www.mage.space/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Mage Space</h5>
+                        <p class="card-text text-dark">Mage is an incredibly simple and fun platform that provides 50+ top, custom Text-to-Image AI models as well as Text-to-GIF for consumers to create personalized content, unlimited & unfiltered.</p>
                     </div>
                 </a>
             </div>
@@ -553,6 +577,12 @@
                     <div class="card-body">
                         <h5 class="card-title">Uizard</h5>
                         <p class="card-text text-dark">Create apps, websites, and more within minutes. Visualize and communicate your ideas effortlessly. No design experience needed.                        </p>
+                    </div>
+                </a>
+                <a href="https://weld.app/" class="link-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">Weld</h5>
+                        <p class="card-text text-dark"> AI assistant for SQL. Connect over hundred different databases including, but not limited to, Shopify, Facebook Ads, and Stripe Payments.                       </p>
                     </div>
                 </a>
             </div>
@@ -660,6 +690,11 @@
                     <h5 class="card-title">The Rundown: Super tools</h5>
                     <p class="card-text text-dark"> Supertools by The Rundown makes it easier for you to find the best AI resources. Featuring all the top tools mentioned for the fastest-growing AI newsletter.                         </p>
                 </div>
+            </a>
+            <a href="https://www.producthunt.com/newsletter?ref=header_nav" class="link-card card">
+                <div class="card-body">
+                    <h5 class="card-title">Product Hunt h5>
+                    <p class="card-text text-dark"> Product Hunt is a curation of the best new products, every day. Discover the latest mobile apps, websites, and technology products that everyone is talking about.
             </a>
         </div>
 
