--- a/index.html
+++ b/index.html
@@ -694,7 +694,8 @@
             <a href="https://www.producthunt.com/newsletter?ref=header_nav" class="link-card card">
                 <div class="card-body">
                     <h5 class="card-title">Product Hunt </h5>
-                    <p class="card-text text-dark"> Product Hunt is a curation of the best new products, every day. Discover the latest mobile apps, websites, and technology products that everyone is talking about.
+                    <p class="card-text text-dark"> Product Hunt is a curation of the best new products, every day. Discover the latest mobile apps, websites, and technology products that everyone is talking about.</p>
+                </div>
             </a>
         </div>
 
