--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <a href="https://callannie.ai/" class="link-card card">
                     <div class="card-body">
                         <h5 class="card-title">Call Annie</h5>
-                        <p class="card-text text-dark">Formerly known as Sam, your always available AI friend, even without internet. +1 (640)-CALL-SAM (225-5726).</p>
+                        <p class="card-text text-dark">Formerly known as Sam, your always available AI friend, even without internet. +1 (640) CALL-SAM (225-5726).</p>
                     </div>
                 </a>
                 <a href="https://huberman.rile.yt/" class="link-card card">
